--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" href="/favicon.ico" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite App</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" />
+		<title>深圳罗湖第二医院</title>
 		<script>
 			;(function () {
 				const prefersDark =
@@ -19,6 +19,7 @@
 
 	<body>
 		<div id="app"></div>
+		<script src="/config.js" type="text/javascript"></script>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
